# Quantic-Capstone-Project

./: .env.example  .gitignore  DESIGN_AND_TESTING.md  README.md  add_safety.py  docker-compose.yml  fix_mui.py  fix_mui_v2.py  fix_mui_v3.py  pyproject.toml
.deepseek/: instructions.md
.github/workflows/: main.yml
deploy/: Caddyfile  docker-compose.prod.yml  launch.sh
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  cv.ts  jobs.ts  matching.ts  vector.ts
frontend/src/components/common/: BackToTop.tsx  CookieConsent.tsx  ProtectedRoute.tsx  ScrollProgress.tsx  WhatsAppButton.tsx
frontend/src/pages/: LandingPage.tsx  PublicJobsPage.tsx  PublicPages.tsx
frontend/src/store/: index.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
services/cv/: Dockerfile  pyproject.toml
services/cv/app/: config.py  main.py  main.py.bak
services/identity/: Dockerfile  alembic.ini  pyproject.toml  seed_admin.py
services/identity/alembic/: env.py
services/identity/app/: config.py  main.py
services/job/: Dockerfile  jobs.db  pyproject.toml  seed_jobs.py
services/job/app/: config.py  main.py
services/matching/: Dockerfile  pyproject.toml
services/matching/app/: config.py  main.py
services/matching/app/api/routes/: matching.py
services/matching/app/infrastructure/llm/: __init__.py  provider.py
services/vector/: Dockerfile  pyproject.toml  seed_qdrant.py
services/vector/app/: config.py  main.py
services/vector/app/api/routes/: search.py
services/vector/app/infrastructure/llm/: __init__.py  provider.py
shared/: pyproject.toml
shared/tests/: conftest.py
shared/tests/domain/: test_base.py  test_events.py  test_repository.py
shared/tumaini_shared/: __init__.py
shared/tumaini_shared/api/: app.py
shared/tumaini_shared/domain/: base.py  events.py  repository.py
shared/tumaini_shared/infrastructure/messaging/: rabbitmq_bus.py
tests/: test_cv_upload_pipeline.py  test_registration.py
tests/samples/resumes/: creative_designer.txt  project_manager.txt  software_engineer.md
(+45 files in other folders)
