[project]
name = "tumaini-shared"
version = "0.1.0"
description = "Shared DDD kernel for Tumaini AI Recruitment Platform"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9",
  "aio-pika>=9.4",
  "fastapi>=0.115",
  "scalar-fastapi>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tumaini_shared"]
