[project]
name = "cv-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "boto3>=1.34",
  "pdfplumber>=0.11",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "spacy>=3.7",
  "python-multipart>=0.0.9",
  "tumaini-shared",
  "openai>=1.0.0",
  "pydantic-settings>=2.0",
]

[tool.uv.sources]
tumaini-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
