[project]
name = "vector-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "qdrant-client>=1.9",
  "sentence-transformers>=3.0",
  "redis>=5.0",
  "openai>=1.30",
  "httpx>=0.27",
  "pydantic-settings>=2.0",
  "tumaini-shared",
]

[tool.uv.sources]
tumaini-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
